# kura

./: .gitignore  README.md  app.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  visualise.py
.github/workflows/: publish.yml  pyright.yml
docs/: index.md
docs/blog/: index.md
docs/blog/posts/: does-kura-work.md
helpers/: clusters.py  conversation.py  embedding.py  sampling.py  types.py  visualisation.py
kura/: __init__.py  cluster.py  dimensionality.py  embedding.py  k_means.py  kura.py  llm_cluster.py  meta_cluster.py  summarisation.py  summarise.py  summary_cluster.py  types.py
kura/base_classes/: __init__.py  cluster.py  clustering_method.py  dimensionality.py  embedding.py  meta_cluster.py  summarisation.py
kura/batched/: summarisation.py
kura/cli/: cli.py  server.py  visualisation.py
kura/types/: __init__.py  cluster.py  conversation.py  dimensionality.py  summarisation.py
test/: cluster_aibots.py  embed_to_file.py  summarise_to_file.py  test.py  test_kura.ipynb
ui/: bun.lockb  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ChatDialog.tsx  analytics-charts.tsx  cluster-details.tsx  cluster-tree.tsx  cluster.tsx  code-block.tsx  markdown.tsx  umap-visualisation.tsx  umap_visualisation.tsx  upload-button.tsx  upload-dialog.tsx  upload-form.tsx
ui/src/lib/: area-calculation.ts  area-calculations.ts  bounds.ts
ui/src/types/: analytics.ts  conversation.ts
