[project]
name = "kura"
version = "0.4.2"
description = "Kura is a tool for analysing and visualising chat data"
readme = "README.md"
authors = [
    { name = "Ivan Leo", email = "ivanleomk@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "instructor[google-generativeai]>=1.7.2",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
    "uvicorn>=0.34.0",
    "fastapi[standard]>=0.115.6",
    "umap-learn>=0.5.7",
    "hdbscan>=0.8.40",
    "eval-type-backport>=0.2.2",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "mkdocs-material>=9.5.49",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.13.0",
]
dev = [
    "pyright>=1.1.392.post0",
]


[project.scripts]
kura = "kura.cli.cli:app"

[tool.pyright]
include = ["kura"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/tests/**",
]

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"